# yancy_client

./: .gitignore
release/x86_64/include/hv/: EventLoop.h  HttpMessage.h  UdpClient.h  hconfig.h  hlog.h
release/x86_64/lib/cmake/cJSON/: cJSONConfig.cmake  cjson-noconfig.cmake  cjson.cmake
release/x86_64/lib/pkgconfig/: libcjson.pc  libhv.pc
src_gui/: build.sh  main.cpp  run.sh  src_gui.pro
src_gui/IPC/: ipc_client.cpp  ipc_client.h  ipc_protocol.cpp  ipc_protocol.h
src_gui/Network/: network_client.cpp  network_client.h
src_server/: CMakeLists.txt  build.sh  main.cpp  run.sh
src_server/IPC/: ipc_protocol.cpp  ipc_protocol.h  ipc_server.cpp  ipc_server.h
tests/: test_ipc_client.cpp  test_ipc_server.cpp
tools/: list.h  singleton.h  thread.h
